@@ -35,12 +35,9 @@ Build-Depends:  debhelper (>= 7.0.50~),
                 libimlib2-dev,
                 libasound2-dev,
                 libjack0.100.0-dev | libjack-dev,
-                libfaad-dev | libfaad2-dev,
-                libmp3lame-dev | liblame-dev,
+		libmp3lame-dev | liblame-dev,
                 libvorbis-dev,
                 libdts-dev,
-                libxvidcore-dev | libxvidcore4-dev,
-                libfftw3-dev | fftw3-dev,
                 lsb-release,
                 libpulse-dev,
                 xserver-xorg-video-openchrome [i386 amd64] | libchromexvmc1 [i386 amd64],
